--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
 <section id="footer" class="displayNone">
   <p id="message">Hi if you like the project Follow Me On:</p>
   <!-- Add font awesome icons -->
-<a href="#" class="fa fa-facebook"></a>
-<a href="#" class="fa fa-twitter"></a>
-<a href="#" class="fa fa-google"></a>
+<a href="facebook.com" class="fa fa-facebook"></a>
+<a href="https://twitter.com/DENNISM44052159" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-linkedin"></a>
-<a href="#" class="fa fa-youtube"></a>
+<a href="youtube.com" class="fa fa-youtube"></a>
 <a href="#" class="fa fa-instagram"></a>
 </section>
     <script src="script.js"></script>
