--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </section>
 
 <!-- FOOTER -->
-<section id="footer" class="displayNone">
+<section id="footer">
   <p id="message">Hi if you like the project Follow Me On:</p>
   <!-- Add font awesome icons -->
 <a href="facebook.com" class="fa fa-facebook"></a>
