--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </section>
 
   <!-- Reset Button -->
-  <section id="choice">
+  <section id="resetSec" class="displayNone">
     <button id="reset">PLay Again</button>
   </section>
 
@@ -44,12 +44,14 @@
 <!-- FOOTER -->
 <section id="footer">
   <p id="message">Hi if you like the project Follow Me On:</p>
-  <!-- Add font awesome icons -->
+<!-- Add font awesome icons -->
+<div id="icons">
 <a href="facebook.com" class="fa fa-facebook"></a>
 <a href="https://twitter.com/DENNISM44052159" class="fa fa-twitter"></a>
-<a href="#" class="fa fa-linkedin"></a>
-<a href="youtube.com" class="fa fa-youtube"></a>
+<a href="https://www.linkedin.com/in/dennis-mwangi-14b7a01b2/" class="fa fa-linkedin"></a>
+<a href="https://github.com/DENNIS-CODES" class="fa fa-github"></a>
 <a href="#" class="fa fa-instagram"></a>
+</div>
 </section>
     <script src="script.js"></script>
   </body>
